// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`readFile should read single file 1`] = `
{
  "message": {
    "type": "text",
    "value": "<read_file_file_content path="file.txt">     1→file content</read_file_file_content>",
  },
  "success": true,
}
`;

exports[`readFile should read multiple files 1`] = `
{
  "message": {
    "type": "text",
    "value": 
"<read_file_file_content path="file1.txt">     1→file1 content</read_file_file_content>
<read_file_file_content path="file2.txt">     1→file2 content</read_file_file_content>"
,
  },
  "success": true,
}
`;

exports[`readFile should handle file not found 1`] = `[Error: File not found]`;
